[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level Geometry/1x1x1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level Geometry/10x1x10.tscn" type="PackedScene" id=3]
[ext_resource path="res://Triggers/Area.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Animation" id=3]
resource_name = "Close"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("1x1x1:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 7.39546, -0.25, 0, 0.25, 0, 1.63821, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("1x1x1:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.02983, -0.25, 0, 0.25, 0, 0.02983, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("1x1x1:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 5.7677, -0.25, 0, 0.25, 0, 5.7677, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("1x1x2:translation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -7.4155, -0.25, 0, 0.25, 0, -0.43786, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("1x1x2:translation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.02983, -0.25, 0, 0.25, 0, 0.02983, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("1x1x2:translation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 5.74474, -0.25, 0, 0.25, 0, 5.74474, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("1x1x1:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.42288, -0.25, 0, 0.25, 0, 7.39546, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("1x1x1:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.02983, -0.25, 0, 0.25, 0, 0.02983, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("1x1x1:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 5.7677, -0.25, 0, 0.25, 0, 5.7677, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("1x1x2:translation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -0.643218, -0.25, 0, 0.25, 0, -7.4155, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("1x1x2:translation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.02983, -0.25, 0, 0.25, 0, 0.02983, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("1x1x2:translation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 5.74474, -0.25, 0, 0.25, 0, 5.74474, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[node name="DoorScene" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.50975, 22.2538 )

[node name="10x1x11" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19.9221 )

[node name="10x1x10" parent="." instance=ExtResource( 3 )]

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.077, 4.0965 )
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 10, 0, 0, 0, 0.5, 0, 0, 0, 5, 0, 0, 9.87161 )
shape = SubResource( 1 )

[node name="1x1x1" parent="Area" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63821, 0.02983, 5.7677 )

[node name="1x1x2" parent="Area" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.43786, 0.02983, 5.74474 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area"]
anims/Close = SubResource( 3 )
anims/Open = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.956687, 0.29112, 0, -0.29112, 0.956687, 0, 8.78975, 27.6435 )
[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Area" method="_on_Area_body_exited"]
